src/index.css
@import url('https://fonts.googleapis.com/css2?family=Fjalla+One&display=swap');
@import url('https://fonts.cdnfonts.com/css/cardium-a');

*{
  box-sizing: border-box;
}
:root {
  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
  line-height: 1.5;
  font-weight: 400;

  color-scheme: light dark;
  color: rgba(0, 0, 0, 0.87);
  background-color: #ffffff;

  font-synthesis: none;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

h1, h2, h3, h4, h5, h6, p {
  margin: 0;
}
a {
  font-weight: 500;
  color: #646cff;
  text-decoration: inherit;
}
a:hover {
  color: #535bf2;
}

body {
  margin: 0;
  display: flex;
  flex-direction: column;
  width: 100%;
  min-height: 100vh;
  padding-top: calc(80px + 2rem);
}
section{
  max-width: 1700px;
  margin: auto;
  padding: 0 2rem 2rem 2rem;
}

@media (max-width: 768px) {
  body{
    padding-top: calc(80px + 1rem);
  }
  section{
    padding: 0 1rem 1rem 1rem;
  }
}

h1 {
  font-size: 2.8rem;
  line-height: 1.1;
}

button , .button{
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: center;
  gap: 0.5rem;
  border-radius: 8px;
  border: 1px solid transparent;
  padding: 0.6em 1.2em;
  font-size: 1em;
  font-weight: 500;
  font-family: inherit;
  background-color: #1a1a1a;
  cursor: pointer;
  transition: border-color 0.25s;
}
button:hover, .button:hover {
  border-color: #646cff;
}
button:focus,
button:focus-visible , .button:focus-visible, .button:focus {
  outline: 4px auto -webkit-focus-ring-color;
}
.button.linkedin{
  background-color: #0077B5;
  color: white;
}
.button.github{
  background-color: #333;
  color: white;
}

@media (prefers-color-scheme: light) {
  :root {
    color: #213547;
    background-color: #ffffff;
  }
  a:hover {
    color: #747bff;
  }
  button {
    background-color: #f9f9f9;
  }
}

/* START - General styles */
.fc{
  display: flex;
  flex-direction: column;
}
.fr{
  display: flex;
  flex-direction: row;
}
.ai-c{
  align-items: center;
}
.g0-5{
  gap: 0.5rem;
}
.g1{
  gap: 1rem;
}
.g2{
  gap: 2rem;
}
.g3{
  gap: 3rem;
}
.c-white{
  color: white;
}

.button.special_button{
  background: rgb(56,255,167);
  background: linear-gradient(97deg, rgb(164 199 30) 0%, rgb(191 88 0) 100%);
  background-origin: border-box;
}

.sms{
  background-color: #008334;
  color: white;
  display: flex;
  flex-direction: column;
  gap: 1rem;
  padding: 1rem;
  border-radius: 1rem;
  position: relative;
}


/* Hide .hide_mobile on mobile, make .fc_on_mobile clas flex-direciton column on mobile */
@media (max-width: 768px) {
  .hide_mobile{
    display: none;
  }
  .fc_on_mobile{
    flex-direction: column;
  }
}
/* Hide .hide_desktop on desktop */
@media (min-width: 768px) {
  .hide_desktop{
    display: none;
  }
}

/* END - General styles */


/* START - HeroSection */

.HS .HS_container{
  display: flex;
  align-items: center;
  justify-content: space-between;
  padding: 4rem;
  background-image: radial-gradient(circle at center center, #29cdf5, #89cf79), repeating-radial-gradient(circle at center center, #29cdf5, #29cdf5, 3rem, transparent 6rem, transparent 3rem);
  background-blend-mode: multiply;
  background-color: #89cf79;
  border-radius: 1rem;
  gap: 2rem;
  position: relative;
}
@media (max-width: 768px) {

  .HS{
    margin-bottom: 3rem;
  }
  .HS .HS_container{
    padding: 2rem;
  }
  .HS .HS_btns{
    flex-direction: column;
    margin-bottom: 2rem;
  }
}
.HS .HS_container:before{
  position: absolute;
  left: 0;
  top: 0;
  width: 100%;
  height: 100%;
  content: '';
  background: black;
  opacity: 0.3;
  z-index: 0;
  border-radius: 1rem;
}
.HS img{
  filter: drop-shadow(0 0 4rem rgba(255,255,255,0.6));
  width: 200px;
}
.HS .HS_content{
  display: flex;
  flex-direction: column;
  gap: 1rem;
  z-index: 1;
}
.HS .HS_title{
  color:white;
  text-shadow: 0 0 16px BLACK;
  font-family: 'Cardium A', sans-serif;
}
.HS .HS_txt{
  color:white;
  text-shadow: 0 0 16px BLACK;
  font-family: 'Cardium A', sans-serif;
  font-size: 1.2rem;
}
.HS .HS_btns{
  display: flex;
  gap: 1rem;
}
.HS .button{
  font-Size:1rem;
  display: flex;
  align-items: center;
  justify-content: center;
  gap: 0.5rem;
}


.HS .HS_extra{
  list-style: none;
  display: flex;
  align-items: center;
  justify-content: center;
  gap: 2rem;
  position: absolute;
  bottom: 0;
  left: 50%;
  transform: translate(-50%, 50%);
  padding: 1rem 2rem;
  z-index: 1;
  background: rgba(255,255,255,0.5);
  -webkit-backdrop-filter: blur(12px);
  backdrop-filter: blur(12px);
  border-radius: 1rem;
  margin: 0;
  width: fit-content;
  box-shadow: rgba(0, 0, 0, 0.25) 0px 25px 50px -12px;
}

.HS .HS_extra li{
  padding: 0;
  display: flex;
  flex-direction: column;
  gap: 0.5rem;
}
.HS .HS_extra li p{
  text-align: center;
  padding: 0;
  font-weight: bold;
  font-size: 1.2rem;
  line-height: 1.2rem;
  text-wrap: nowrap;
}
.HS .HS_extra li h4{
  font-size: 2rem;
  text-align: center;
  line-height: 2rem;
  padding: 0;
  text-wrap: nowrap;
  color: green;

}

/* END - HeroSection */





/* START - AboutSection */
.AS {
  justify-content: space-between;
  border-radius: 1rem;
  position: relative;
}

.AS .AS_card{
  padding: 1.5rem;
  border-radius: 1rem;
  background-color: #94dfa9;
}
.AS .AS_card.grey{
  background-color: #e7e7e7;
}

.AS .AS_card img{
  width: 120px;
}

/* END - AboutSection */




/* START - SkillsSection */
.SS {
  justify-content: space-between;
  border-radius: 1rem;
  position: relative;
  margin-bottom: 2rem;
}
.SS_btns button{
  background-color: #ffeaba;
  color: #1a1a1a;
  border: 1px solid #ffaf5e;
  padding: 0.5rem 1rem;
  border-radius: 0.5rem;
  font-size: 1rem;
  font-weight: bold;
  cursor: pointer;
  transition: all 0.25s;

}
@media (max-width: 768px) {

  .SS_btns{
    flex-wrap: wrap;
    justify-content: center;
  }
}
.SS_btns button.active{
  background-color: #ffb219;
}
.skills-icons{
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
}
.skills-icons div{
  background-color: #e7e7e7;
  width: 90px;
  height: 90px;
  aspect-ratio: 1/1;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  border-radius: 0.5rem;
}
.skills-icons img{
  width: 50px;
  height: 50px;
  object-fit: contain;
}
/* END - SkillsSection */





/* START - ProjectsSection */
.PS {
  justify-content: space-between;
  border-radius: 1rem;
  position: relative;
}

.PS_card{
  display: flex!important;
  width: auto!important;
  height: -webkit-fill-available;
  /*width: 300px ;*/
  border-radius: 1rem;
  overflow: hidden;
  background-color: #e7e7e7;
  position: relative;

  cursor: pointer;
  box-shadow: rgba(0, 0, 0, 0.1) 0px 0px 5px 0px, rgba(0, 0, 0, 0.1) 0px 0px 1px 0px;

}
.PS_card .content{
  position: absolute;
  display: flex;
  flex-direction: column;
  justify-content: flex-end;
  padding: 1rem;
  width: 100%;
  height: 100%;
  top: 0;
  left: 0;
  /*background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0) 20%, rgba(0, 0, 0, 0.8) 100%);*/
  background-position: bottom 100px ;
  color: white;
  transition: all 0.2s;
  z-index: 0;
}
.PS_card .content span{
  color: #92ff78;
}
.PS_card .content p{
  padding-left: 0.8rem;
  width: fit-content;
  font-weight: bold;
  background-color: red;
  text-transform: capitalize;
  background-image: linear-gradient(97deg, rgb(164 199 30) 0%, rgb(255, 118, 5) 100%);
  background-size: 100%;
  background-repeat: repeat;
  -webkit-background-clip: text;
  -webkit-text-fill-color: transparent;
  -moz-background-clip: text;
  -moz-text-fill-color: transparent;
  position: relative;
  font-family: 'Cardium A', sans-serif;
}

.PS_card .content:before{
  content: '';
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.8) 100%);
  transition: all 0.2s;
  z-index: -1;
}

.PS_card .content h3{
  font-family: 'Cardium A', sans-serif;
}
.PS_card .content p:before{
  content: '';
  position: absolute;
  top: 0.5rem;
  left: 0;
  width: 0.5rem;
  height: 0.5rem;
  border-radius: 0.5rem;
  background-color: rgb(164 199 30);
}
.PS_card img{
  width: 100%;
  height: 100%;
  object-fit: cover;
}

.PS_card .content button{
  transition: all 0.2s;
  opacity: 0;
  font-size: 0.8rem;
  position: absolute;
  top: 1rem;
  right: 1rem;
  padding: 0.7rem;
  border-radius: 4rem;
  background-color: white;
  color: black;
  box-shadow: rgba(0, 0, 0, 0.1) 0px 0px 5px 0px, rgba(0, 0, 0, 0.1) 0px 0px 1px 0px;
}
.PS_card .content:hover button{
  opacity: 1;
}
.PS_card .content:hover:before{
  top: 50px;
}


/* Styles personnalisés pour les boutons précédent/suivant */
.slick-prev, .slick-next {
  z-index: 1;
  margin:15px;
  border: none;
  display: flex;
  justify-content: center;
  align-items: center;

}
.slick-prev:before, .slick-next:before {
  font-size: 2rem;
  color: black
}

.slick-prev { left: -35px; }
.slick-next { right: -35px; }
.PS_card {
  margin: 15px; /* Ajoutez une marge à gauche et à droite */
}

.slick-slide{
  aspect-ratio: 1/1;
}
.slick-slide >div , .slick-slide > div > div.PS_card{
  height: -webkit-fill-available;
}
.slick-track{
  display: flex;
  align-items: center;
}
/* END - ProjectsSection */

/* START - ContactSection */

/* END - ContactSection */

/* START - ProjetPage */


.PP .PP_content{
  display: flex;
  flex-direction: column;
  gap: 1rem;
}
.PP .PP_content h1{
  font-family: 'Cardium A', sans-serif;
}
.PP .PP_title_date_type h3, .PP_title_date_type span{
  font-family: 'Cardium A', sans-serif;
}
.PP_img{
  width: 50%;
  max-width: 600px;
  border-radius: 1rem;
  object-fit: contain;
}
@media (max-width: 768px) {
  .PP{
    flex-direction: column;
  }

  .PP_img{
    width: 100%;
    max-width: 100%;
    height: 200px;
    object-fit: cover;
    object-position: center;
    box-shadow: rgba(0, 0, 0, 0.1) 0px 0px 5px 0px, rgba(0, 0, 0, 0.1) 0px 0px 1px 0px;
  }
}
.PP_technos{
  flex-wrap: wrap;
}

.PP_technos div{
  display: flex;
  flex-direction: column;
  background-color: #e7e7e7;
  border-radius: 0.5rem;
  padding: 0.5rem;
  align-items: center;
  justify-content: center;
}
.PP_technos div img{
  width: 30px;
  height: 30px;
  object-fit: contain;
}
/* END - ProjetPage */

